fix outras cores de texto no dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,9 @@
   --color-base-100: #1f2937;
   --color-base-content: #f3f4f6;
   --color-info-content: oklch(0.77 0.08 241.55);
+  --color-success-content: oklch(0.7 0.18 166.13);
+  --color-warning-content: oklch(0.68 0.13 47.67);
+  --color-error-content: oklch(0.61 0.23 11.27);
 }
 
 html {
